concord_macros/tests/trybuild/fail/pagination/pagination_unknown_field_offset_limit.stderr
error[E0609]: no field `cursor` on type `concord_core::internal::OffsetLimitPagination`
  --> tests/trybuild/fail/pagination/pagination_unknown_field_offset_limit.rs:16:13
   |
16 |             cursor = start,
   |             ^^^^^^ unknown field
   |
   = note: available fields are: `offset`, `limit`

error[E0609]: no field `cursor` on type `&concord_core::internal::OffsetLimitPagination`
  --> tests/trybuild/fail/pagination/pagination_unknown_field_offset_limit.rs:16:13
   |
16 |             cursor = start,
   |             ^^^^^^ unknown field
   |
   = note: available fields are: `offset`, `limit`
